@@ -49,16 +49,6 @@
   </div>
 </div>
 
-<% if current_user and current_user.administrator? %>
-  <div class="control-group">
-    <%= f.label :previous_institutions, nil, class: 'control-label' %>
-    <div class="controls">
-      <%= simple_format applicant.previous_institutions unless applicant.previous_institutions.blank? %>
-      <%#= f.text_area :previous_institutions, rows: 7, style: "width:95%" %>
-    </div>
-  </div>
-<% end %>
-
 <div class="control-group">
   <%= f.label :degree_sought, nil, class: 'control-label' %>
   <div class="controls radio">
