@@ -21,7 +21,6 @@ one:
   preferred_preceptor_id: 1
   primary_preceptor_id: 1
   secondary_preceptor_id: 1
-  previous_institutions: MyText
   review_date: 2012-04-02
   reviewed: false
   tge: false
@@ -83,7 +82,6 @@ two:
   preferred_preceptor_id: 1
   primary_preceptor_id: 1
   secondary_preceptor_id: 1
-  previous_institutions: MyText
   review_date: 2012-04-02
   reviewed: false
   tge: false
